// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render CardInnerBody 1`] = `
<div
  class="wp-components-surface wp-components-card css-1wkjna9"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  >
    <div
      class="wp-components-view wp-components-flex wp-components-card-header css-1pmd33w"
      data-g2-c16t="true"
      data-g2-component="CardHeader"
      title="Olaf"
    />
    <div
      class="wp-components-card-inner-body css-b4x44d"
      data-g2-c16t="true"
      data-g2-component="CardInnerBody"
    >
      Some people are worth melting for.
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-card-footer css-5kbgil"
      data-g2-c16t="true"
      data-g2-component="CardFooter"
    >
      <div
        class="wp-components-flex-item css-1mq9jmc"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <button
          aria-busy="false"
          class="css-1eci7gf"
          data-destructive="false"
          data-g2-c16t="true"
          data-g2-component="Button"
          data-icon="false"
          type="button"
        >
          <span
            class="wp-components-view wp-components-flex css-1gjqylm"
            data-g2-c16t="true"
            data-g2-component="Flex"
          >
            <span
              class="wp-components-flex-item wp-components-flex-block css-1xcbse6"
              data-g2-c16t="true"
              data-g2-component="ButtonContent"
            >
              Agree
            </span>
          </span>
          <span
            class="wp-components-elevation css-1l26w1c"
            data-g2-c16t="true"
            data-g2-component="ButtonElevation"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="wp-components-elevation css-195uczh"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-bse408"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-surface wp-components-card css-1wkjna9"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  >
    <div
      class="wp-components-view wp-components-flex wp-components-card-header css-1pmd33w"
      data-g2-c16t="true"
      data-g2-component="CardHeader"
      title="Olaf"
    />
    <div
      class="wp-components-scrollable wp-components-card-body css-luh4lg"
      data-g2-c16t="true"
      data-g2-component="CardBody"
    >
      <div
        class="css-12ced0d"
      >
        Some people are worth melting for.
      </div>
    </div>
    <div
      class="wp-components-view wp-components-flex wp-components-card-footer css-5kbgil"
      data-g2-c16t="true"
      data-g2-component="CardFooter"
    >
      <div
        class="wp-components-flex-item css-1mq9jmc"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <button
          aria-busy="false"
          class="css-1eci7gf"
          data-destructive="false"
          data-g2-c16t="true"
          data-g2-component="Button"
          data-icon="false"
          type="button"
        >
          <span
            class="wp-components-view wp-components-flex css-1gjqylm"
            data-g2-c16t="true"
            data-g2-component="Flex"
          >
            <span
              class="wp-components-flex-item wp-components-flex-block css-1xcbse6"
              data-g2-c16t="true"
              data-g2-component="ButtonContent"
            >
              Agree
            </span>
          </span>
          <span
            class="wp-components-elevation css-1l26w1c"
            data-g2-c16t="true"
            data-g2-component="ButtonElevation"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="wp-components-elevation css-195uczh"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-bse408"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render elevation 1`] = `
<div
  class="wp-components-surface wp-components-card css-1wkjna9"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-195uczh"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-mrgtyy"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render no elevation 1`] = `
<div
  class="wp-components-surface wp-components-card css-1wkjna9"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="CardContent"
  />
  <div
    class="wp-components-elevation css-w07qp3"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="wp-components-elevation css-z8oqtb"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;
